--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -15,17 +15,22 @@
     <title>dewdkob</title>
 </head>
 
-<body>
-    <h1>123</h1>
-    <img src="{% static 'assets/dedkov.jpg' %}" onclick="alert(`я дедков`)" alt="My image">
-    <button class="button" onclick="buttonClick(event.target)">Click me</button>
-    <a href="ded" target="_blank">Ссылка на деда</a>
-    <form onsubmit="register(event)">
-        {% csrf_token %}
-        <input type="text" name="name" placeholder="Логин" />
-        <input type="text" name="password" placeholder="Парлоль" />
-        <button>Зарегестирорвать</button>
-    </form>
+<h1 class="text">123</h1>
+<img src="{% static 'assets/dedkov.jpg' %}" onclick="alert(`я дедков`)" alt="My image" />
+<button class="button" onclick="buttonClick(event.target)">Click me</button>
+<form onsubmit="createDict(event)">
+    {% csrf_token %}
+    <input type="text" required name="name" placeholder="Название словаря">
+    <input type="text" required name="lang1">
+    <input type="text" required name="lang2">
+    <button>Создать словарь</button>
+</form>
+<form onsubmit="register(event)">
+    {% csrf_token %}
+    <input type="text" required name="name" placeholder="Логин">
+    <input type="text" name="password" required placeholder="Парлоль">
+    <button>Зарегестирорвать</button>
+</form>
 </body>
 
 </html>
