--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -3,34 +3,24 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css">
-    <script src="{% static 'js/main.js' %}"></script>
-    <title>dewdkob</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css" />
+  <script src="{% static 'js/main.js' %}"></script>
+  <title>{% block title %} Mysite {% endblock %}</title>
 </head>
 
-<h1 class="text">123</h1>
-<img src="{% static 'assets/dedkov.jpg' %}" onclick="alert(`я дедков`)" alt="My image" />
-<button class="button" onclick="buttonClick(event.target)">Click me</button>
-<form onsubmit="createDict(event)">
-    {% csrf_token %}
-    <input type="text" required name="name" placeholder="Название словаря">
-    <input type="text" required name="lang1">
-    <input type="text" required name="lang2">
-    <button>Создать словарь</button>
-</form>
-<form onsubmit="register(event)">
-    {% csrf_token %}
-    <input type="text" required name="name" placeholder="Логин">
-    <input type="text" name="password" required placeholder="Парлоль">
-    <button>Зарегестирорвать</button>
-</form>
+<body>
+  <ul class="menu">
+    <li class="menu__element"><a>Home</a></li>
+    <li class="menu__element"><a>Profile</a></li>
+  </ul>
+  <div class="content">{% block content %}{% endblock %}</div>
 </body>
 
 </html>
