--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,3 +1,4 @@
+<!-- загружаем статические файлы из директории static -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="ru">
@@ -5,12 +6,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- подключение шрифтов -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet" />
+  <!-- подключение стилей -->
   <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css" />
+  <!-- подключение js -->
   <script src="{% static 'js/main.js' %}"></script>
   <title>{% block title %} Mysite {% endblock %}</title>
 </head>
@@ -20,7 +24,7 @@
     <li class="menu__element"><a>Home</a></li>
     <li class="menu__element"><a>Profile</a></li>
   </ul>
+  <!-- внутри дива будет блок content, который может определяться в дочерних шаблонах -->
   <div class="content">{% block content %}{% endblock %}</div>
 </body>
-
 </html>
