--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,10 +1,14 @@
+<!-- наследуемся от базового шаблона -->
 {% extends "index.html" %}
 {% load static %}
 
+<!-- определение блока title -->
 {% block title %}Main page{% endblock %}
 
+<!-- определение блока content -->
 {% block content %}
 <ul>
+  <!-- цикл по массиву dicts из контекста -->
   {% for dict in dicts %}
   <li>
     <a href="dict/{{ dict.id }}">{{ dict.name }}</a>
@@ -13,12 +17,15 @@
 </ul>
 <img src="{% static 'assets/dedkov.jpg' %}" onclick="alert(`я дедков`)" alt="My image" />
 <button class="button" onclick="buttonClick(event.target)">Click me</button>
+<!-- при отправке форрмы вызывается функция createDict -->
 <form onsubmit="createDict(event)">
+  <!-- django вставляет скрытый инпут с csrf_token в форму сам -->
   {% csrf_token %}
   <input type="text" required name="name" placeholder="Название словаря" />
   <input type="text" required name="lang1" />
   <input type="text" required name="lang2" />
-  <button>Создать словарь</button>
+  <!-- нажатие едиственной кнопки в теге form вызывает ивент onsubmit -->
+  <button class="main-button">Создать словарь</button>
 </form>
 <form onsubmit="register(event)">
   {% csrf_token %}
