--- a/main/static/css/index.css
+++ b/main/static/css/index.css
@@ -8,7 +8,8 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #b88f60;
+  display: block;
   /* position: fixed; */
   top: 0;
   width: 100%;
@@ -21,27 +22,27 @@
 .menu__element a {
   display: block;
   color: white;
-  text-align: center;
-  padding: 14px 16px;
+  text-align: right;
+  padding: 20px 25px;
   text-decoration: none;
 }
 
 .menu__element a:hover:not(.active) {
-  background-color: #111;
+  background-color: #b85c40;
 }
 
 .main-button {
   align-items: center;
   appearance: none;
-  background-color: #FCFCFD;
+  background-color: #ffffff;
   border-radius: 4px;
   border-width: 0;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
   box-sizing: border-box;
   color: #36395A;
   cursor: pointer;
   display: inline-flex;
-  font-family: "JetBrains Mono",monospace;
+  font-family: "JetBrains Mono", monospace;
   height: 48px;
   justify-content: center;
   line-height: 1;
@@ -50,14 +51,14 @@
   padding-left: 16px;
   padding-right: 16px;
   position: relative;
-  text-align: left;
+  text-align: right;
   text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
+  transition: box-shadow .15s, transform .15s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   white-space: nowrap;
-  will-change: box-shadow,transform;
+  will-change: box-shadow, transform;
   font-size: 18px;
 }
 
