--- a/main/templates/dictionary.html
+++ b/main/templates/dictionary.html
@@ -7,5 +7,18 @@
 <!-- определение блока content -->
 {% block content %}
 <h1>{{ dict.name }} </h1>
+<p>Автор:</p>
 <a href="/user/{{ dict.creator.id }}">{{ dict.creator.username }}</a>
+<form onsubmit="start_test(event, '{{ dict.id }}')">
+    {% csrf_token %}
+    <button>Начать прохождение</button>
+</form>
+<ul>
+    <!-- цикл по массиву dicts из контекста -->
+    {% for word in words %}
+    <li>
+        {{ word.word1 }} - {{word.word2}}
+    </li>
+    {% endfor %}
+</ul>
 {% endblock %}
