--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -22,7 +22,7 @@
 <body>
   <ul class="menu">
     <li class="menu__element"><a href="http://127.0.0.1:8000/">Главная</a></li>
-    <li class="menu__element"><a href="http://127.0.0.1:8000/mine">Мои словари</a></li>
+    <li class="menu__element"><a href="http://127.0.0.1:8000/my-dicts">Мои словари</a></li>
     <li class="menu__element"><a>Инструкция</a></li>
     <li class="menu__element"><a href="http://127.0.0.1:8000/profile">{{ user.username|default:"Войти" }}</a></li>
   </ul>
