--- a/main/templates/create_dict.html
+++ b/main/templates/create_dict.html
@@ -9,8 +9,16 @@
   <!-- django вставляет скрытый инпут с csrf_token в форму сам -->
   {% csrf_token %}
   <input type="text" required name="name" placeholder="Название словаря" />
-  <input type="text" required name="lang1" />
-  <input type="text" required name="lang2" />
+  <select name="lang1">
+    {% for lang in langs %}
+    <option value="{{ lang.id }}">{{ lang.name }}</option>
+    {% endfor %}
+  </select>
+  <select name="lang2">
+    {% for lang in langs %}
+    <option value="{{ lang.id }}">{{ lang.name }}</option>
+    {% endfor %}
+  </select>
   <div class="words_input_container">
     <div class="words_input_container__word">
       <input type="text" required name="word1" />
