--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -8,7 +8,7 @@
     {% csrf_token %}
     <input type="text" required name="name" placeholder="Логин" />
     <input type="text" name="password" required placeholder="Пароль" />
-    <button>Войти</button>
+    <button class="main-button">Войти</button>
     <a href="http://127.0.0.1:8000/registration">Зарегистрироваться</a>
 </form>
 {% endblock %}
