--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <ul class="menu">
-    <img class="menu__element logo" src="{% static 'assets/slovouch.png' %}" alt="dedkov" />
+    <img class="menu__element logo" src="{% static 'assets/slovouch_purple.png' %}" alt="dedkov" />
     <li class="menu__element"><a href="http://127.0.0.1:8000/">Главная</a></li>
     <li class="menu__element"><a href="http://127.0.0.1:8000/my-dicts">Мои словари</a></li>
     <li class="menu__element"><a>Инструкция</a></li>
