--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -7,16 +7,19 @@
 
 <!-- определение блока content -->
 {% block content %}
-<ul>
-  <!-- цикл по массиву dicts из контекста -->
-  {% for dict in dicts %}
-  <li>
-    <a href="dict/{{ dict.id }}">{{ dict.name }} {{ dict.creator.username }}</a>
-  </li>
-  {% endfor %}
-</ul>
-<img src="{% static 'assets/dedkov.jpg' %}" onclick="event.target.remove()" alt="My image" />
-<button class="button" onclick="buttonClick(event.target)">Click me</button>
-<!-- при отправке форрмы вызывается функция createDict -->
+<div class="dedkov">
+  <ul class="dicts">
+    <!-- цикл по массиву dicts из контекста -->
+    {% for dict in dicts %}
+    <li class="dict-main">
+      <p>
+        <a href="dict/{{ dict.id }}">{{ dict.name }}</a>
+      </p>
+      <a href="dict/{{ dict.id }}"> <img src="../static/assets/{{ dict.id }}.jpg" /> </a>
+    </li>
+    {% endfor %}
+  </ul>
+  <img src="{% static 'assets/dedkov.jpg' %}" onclick="event.target.remove()" alt="My image" />
+</div><!-- при отправке форрмы вызывается функция createDict -->
 </form>
 {% endblock %}
