--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -20,6 +20,5 @@
     {% endfor %}
   </ul>
   <img src="{% static 'assets/dedkov.jpg' %}" onclick="event.target.remove()" alt="My image" />
-</div><!-- при отправке форрмы вызывается функция createDict -->
-</form>
+</div>
 {% endblock %}
